--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,4 @@
+
 version: '3'
 
 services:
@@ -5,13 +6,14 @@ services:
     build: .
     volumes:
       - .:/go/app
+    # platform: linux/amd64
     ports:
       - "8000:8000"
     extra_hosts:
-      - "host.docker.internal:127.17.0.1"
-  
+      - "host.docker.internal:172.17.0.1"
+
   mysql:
-    image: "mysql:5.7"
+    image: mysql:5.7
     container_name: mysql
     ports:
       - "3306:3306"
@@ -20,7 +22,7 @@ services:
       MYSQL_DATABASE: products
       MYSQL_PASSWORD: root
     extra_hosts:
-      - "host.docker.internal:127.17.0.1"
+      - "host.docker.internal:172.17.0.1"
 
   zookeeper:
     image: confluentinc/cp-zookeeper:7.3.0
@@ -32,10 +34,10 @@ services:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
 
-  broker:
+  kafka:
     image: confluentinc/cp-server:7.3.0
-    hostname: broker
-    container_name: broker
+    hostname: kafka
+    container_name: kafka
     depends_on:
       - zookeeper
     ports:
@@ -45,7 +47,7 @@ services:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT,OUTSIDE:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:29092,PLAINTEXT_HOST://localhost:9092,OUTSIDE://host.docker.internal:9094
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092,OUTSIDE://host.docker.internal:9094
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
       KAFKA_CONFLUENT_LICENSE_TOPIC_REPLICATION_FACTOR: 1
@@ -60,27 +62,13 @@ services:
     hostname: control-center
     container_name: control-center
     depends_on:
-      - broker
+      - kafka
     ports:
       - "9021:9021"
     environment:
-      CONTROL_CENTER_BOOTSTRAP_SERVERS: 'broker:29092'
+      CONTROL_CENTER_BOOTSTRAP_SERVERS: 'kafka:29092'
       CONTROL_CENTER_REPLICATION_FACTOR: 1
       CONTROL_CENTER_INTERNAL_TOPICS_PARTITIONS: 1
       CONTROL_CENTER_MONITORING_INTERCEPTOR_TOPIC_PARTITIONS: 1
       CONFLUENT_METRICS_TOPIC_REPLICATION: 1
       PORT: 9021
-  
-  kafka-topics-generator:
-    image: confluentinc/cp-server:7.3.0
-    depends_on:
-      - broker
-    command: >
-      bash -c
-        "sleep 10s &&
-        kafka-topics --create --topic=match_created --if-not-exists --bootstrap-server=broker:29092 &&
-        kafka-topics --create --topic=match_result_updated --if-not-exists --bootstrap-server=broker:29092 &&
-        kafka-topics --create --topic=player_created --if-not-exists --bootstrap-server=broker:29092 &&
-        kafka-topics --create --topic=my_players_updated --if-not-exists --bootstrap-server=broker:29092 &&
-        kafka-topics --create --topic=action_added --if-not-exists --bootstrap-server=broker:29092"
-      
